--- a/web/lang/10001/zhHans.json
+++ b/web/lang/10001/zhHans.json
@@ -209,7 +209,7 @@
 		"picking": "拣货中",
 		"packing": "打包中",
 		"shipped": "已发货",
-		"received": "已收货",
+		"received": "已到货",
 		"completed": "已完成",
 		"problem_piece": "问题件",
 		"parcel_no_num": "包裹单号：{num}",
@@ -1669,6 +1669,7 @@
        "待付款":"待付款",
        "待发货":"待发货",
        "已发货":"已发货",
+       "已到货":"已到货",
        "已完成":"已完成",
        "复制成功":"复制成功",
        "到货时间":"到货时间",
