--- a/web/lang/10001/zhHant.json
+++ b/web/lang/10001/zhHant.json
@@ -209,7 +209,7 @@
 		"picking": "揀貨中",
 		"packing": "打包中",
 		"shipped": "已發貨",
-		"received": "已收貨",
+		"received": "已到貨",
 		"completed": "已完成",
 		"problem_piece": "問題件",
 		"parcel_no_num": "包裹單號：{num}",
@@ -1669,6 +1669,7 @@
        "待付款":"待付款",
        "待发货":"待發貨",
        "已发货":"已發貨",
+       "已到货":"已到貨",
        "已完成":"已完成",
        "复制成功":"複製成功",
        "到货时间":"到貨時間",
