增加子订单功能

--- a/web/lang/10001/zhHans.json
+++ b/web/lang/10001/zhHans.json
@@ -850,7 +850,10 @@
 		"check_logistics": "查看物流",
 		"confirm_receipt": "确认签收",
 		"to_pay": "去支付",
-		"View_comments": "查看评论"
+		"View_comments": "查看评论",
+		"子订单": "子订单",
+		"长/宽/高/体积/重量": "长/宽/高/体积/重量",
+		"子订单/分箱": "子订单/分箱"
 	},
 	"page_my_dingdan_qpj": {
 		"Publish_evaluation": "发表评价",
@@ -1702,5 +1705,15 @@
        "您的包裹已送达，订单已完成":"您的包裹已送达，订单已完成",
        "问题件":"问题件",
        "包裹为问题件，请等待处理":"包裹为问题件，请等待处理"
+    },
+    "page_my_uservip":{
+       "VIP会员":"VIP会员",
+       "我的等级":"我的等级",
+       "VIP等级":"VIP等级",
+       "上传支付凭证":"上传支付凭证",
+       "等级说明":"等级说明",
+       "确认购买":"确认购买",
+       "积分充值":"积分充值",
+       "积分使用":"积分使用"
     }
 }
