--- a/web/lang/10001/zhHans.json
+++ b/web/lang/10001/zhHans.json
@@ -121,7 +121,9 @@
 		"daifukuan":"待付款",
 		"save_phone_number": "保存手机号",
 		"usermark":"请切换唛头",
-		"bind_usermark":"切换唛头"
+		"bind_usermark":"切换唛头",
+		"请输入用户编号提示":"请输入你的用户编号或者旧版本的编号，不填则自动生成",
+		"请输入用户编号":"请输入用户编号"
 	},
 	"page_baoguoyg": {
 		"package_forecast": "包裹预报",
