--- a/web/lang/10001/en.json
+++ b/web/lang/10001/en.json
@@ -17,6 +17,7 @@
 "submit_package_request": "Submit a packaging request"
 },
 "page_index": {
+"guanzhu":"Follow us",    
 "bestRoute": "Best Logistics",
 "aging": "Aging",
 "day": "day",
