--- a/web/lang/10001/zhHant.json
+++ b/web/lang/10001/zhHant.json
@@ -1696,5 +1696,15 @@
        "您的订单已完成":"您的訂單已完成",
        "问题件":"問題件",
        "包裹为问题件，请等待处理":"包裹為問題件，請等待處理"
+    },
+    "page_my_uservip":{
+       "VIP会员":"VIP會員",
+       "我的等级":"我的等級",
+       "VIP等级":"VIP等級",
+       "上传支付凭证":"上傳支付憑證",
+       "等级说明":"等級說明",
+       "确认购买":"確認購買",
+       "积分充值":"積分充值",
+       "积分使用":"積分使用"
     }
 }
