--- a/web/lang/10001/zhHans.json
+++ b/web/lang/10001/zhHans.json
@@ -700,6 +700,7 @@
 		"make_door": "预约上门取件",
 		"add_address": "添加寄件地址",
 		"change_address": "更换上门地址",
+		"saddress": "更换收件地址",
 		"send_country": "寄往国家",
 		"bulk_warehouse": "集运仓库",
 		"item_category": "物品品类",
