--- a/web/lang/10001/zhHant.json
+++ b/web/lang/10001/zhHant.json
@@ -691,7 +691,8 @@
 	},
 	"page_baoguoappointment": {
 		"make_door": "預約上門取件",
-		"add_address": "添加寄件地址",
+		"add_address": "添加收件地址",
+		"add_jaddress": "添加寄件地址",
 		"change_address": "更換上門地址",
 		"saddress": "更換收件地址",
 		"send_country": "寄往國家",
