优化上门取件

--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -1,5 +1,100 @@
 {
 	"分享墙": "分享墙",
-	"暂无分享": "暂无分享",
-	"包裹单号": "包裹单号"
+	"暂无更多分享": "暂无更多分享",
+	"包裹单号": "包裹单号",
+	"发布分享": "发布分享",
+	"发布您对本次盲盒产品的分享": "发布您对本次盲盒产品的分享",
+	"您的建议": "您提供的建议，是我们提供更好的服务的方向",
+	"提交": "提交",
+	"添加地址": "添加地址",
+	"修改地址": "修改地址",
+	"地址管理": "地址管理",
+	"删除": "删除",
+	"暂无寄件地址": "暂无寄件地址",
+	"暂无收货地址": "暂无收货地址",
+	"新增地址": "新增地址",
+	"设为默认":"设为默认",
+    "默认地址":"默认地址",
+    "寄件人": "寄件人",
+    "请填写寄件人":"请填写寄件人",
+    "是否设置为默认地址?":"是否设置为默认地址?",
+    "确认删除?":"确认删除?",
+    "身份证号": "身份证号",
+    "请填写身份证号": "请填写身份证号",
+    "通关代码": "通关代码",
+	"请填写个人通关代码": "请填写个人通关代码",
+    "电话区号": "电话区号",
+    "请输入电话区号": "请输入电话区号",
+    "联系电话": "联系电话",
+	"请填写联系电话": "请填写联系电话",
+    "国家/地区": "国家/地区",
+    "州/省": "州/省",
+	"请填写州/省": "请填写州/省",
+	"城市": "城市",
+	"请输入城市": "请输入城市",
+	"区": "区",
+	"请输入区": "请输入区",
+	"街道": "街道",
+	"请输入街道": "请输入街道",
+	"唛头": "唛头",
+	"请输入唛头":"请输入唛头",
+	"门牌号": "门牌号",
+	"请输入门牌号": "请输入门牌号",
+	"详细地址": "详细地址",
+	"请输入详细地址": "请输入详细地址",
+	"邮编": "邮编",
+	"请输入邮编": "请输入邮编",
+    "邮箱": "邮箱",
+	"请输入您的邮箱": "请输入您的邮箱",
+    "备注": "备注",
+    "请选择国家":"请选择国家",
+    "街道必填":"街道必填",
+    "省/州必填":"省/州必填",
+    "城市必填":"城市必填",
+    "区必填":"区必填",
+    "手机号必填":"手机号必填",
+    "寄件人必填":"寄件人必填",
+    "通关代码必填":"通关代码必填",
+    "门牌号必填":"门牌号必填",
+    "邮编必填":"邮编必填",
+    "邮箱必填":"邮箱必填",
+    "唛头必填":"唛头必填",
+    "收件人":"收件人",
+    "请填写收件人":"请填写收件人",
+    "收件人必填":"收件人必填",
+    "保存地址": "保存地址",
+    "预约上门取件": "预约上门取件",
+	"添加收件地址": "添加收件地址",
+	"添加寄件地址": "添加寄件地址",
+	"更换上门地址": "更换上门地址",
+	"更换收件地址": "更换收件地址",
+	"寄往国家": "寄往国家",
+	"集运仓库": "集运仓库",
+	"物品品类": "物品品类",
+	"物品价值": "物品价值",
+	"请输入物品价值": "请输入物品价值",
+	"商品备注": "商品备注",
+	"请输入备注": "请输入备注...",
+	"拍照上传": "拍照上传",
+	"已查看并同意": "已查看并同意",
+	"提交订单": "提交订单",
+	"打包发货方式": "打包发货方式",
+	"请选择商品品类":"请选择商品品类",
+	"请填写寄件地址": "请填写寄件地址",
+	"请填写收件地址": "请填写收件地址",
+	"请选择仓库": "请选择仓库",
+	"物品分类不能为空": "物品分类不能为空",
+	"物品价值不可为空": "物品价值不可为空",
+	"必须填写备注信息": "必须填写备注信息",
+	"必须上传包裹图片": "必须上传包裹图片",
+	"请先查看并勾选规则":"请先查看并勾选规则",
+	"订阅成功!":"订阅成功!",
+	"温馨提示":"温馨提示",
+	"您已拒绝授权，将无法在微信中收到回复通知":"您已拒绝授权，将无法在微信中收到回复通知",
+	"我知道了": "我知道了",
+	"暂不打包": "暂不打包",
+	"我还有其他快递包裹在路上，到齐后一起提交打包": "我还有其他快递包裹在路上，到齐后一起提交打包",
+	"快速打包": "快速打包",
+	"我只有一个包裹，到达仓库后请直接打包，我想快点发货": "我只有一个包裹，到达仓库后请直接打包，我想快点发货"
+
 }
