增加批次包裹导出功能

--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -95,6 +95,7 @@
 	"暂不打包": "暂不打包",
 	"我还有其他快递包裹在路上，到齐后一起提交打包": "我还有其他快递包裹在路上，到齐后一起提交打包",
 	"快速打包": "快速打包",
-	"我只有一个包裹，到达仓库后请直接打包，我想快点发货": "我只有一个包裹，到达仓库后请直接打包，我想快点发货"
-
+	"我只有一个包裹，到达仓库后请直接打包，我想快点发货": "我只有一个包裹，到达仓库后请直接打包，我想快点发货",
+    "重量": "重量",
+    "立方": "立方"
 }
