--- a/web/lang/10001/zhHant.json
+++ b/web/lang/10001/zhHant.json
@@ -836,7 +836,7 @@
 		"Select_coupon": "選擇優惠券",
 		"p_Select_coupon": "請選擇優惠券",
 		"Discount_amount": "優惠金額",
-		"Original_price": "原價：",
+		"Original_price": "訂單金額：",
 		"Preferential_price": "優惠價：",
 		"payment_method": "付款方式",
 		"wx_pay": "微信支付",
