--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -266,14 +266,11 @@
     "请填写自提联系人":"请填写自提联系人",
     "请填写自提联系电话":"请填写自提联系电话",
     "请输入正确的联系电话":"请输入正确的联系电话",
-    "guanbi":"关闭",
-    "shuoming":"说明",
-    "zhekou":"会员折扣价",
+    "说明":"说明",
     "仓库不存在": "仓库不存在",
     "自提点不能为空": "自提点不能为空",
     "自提电话不能为空": "自提电话不能为空",
     "请输入正确电话格式": "请输入正确电话格式",
-    "说明": "说明",
     "不使用优惠券": "不使用优惠券",
     "有效期": "有效期",
     "满": "满",
@@ -758,5 +755,59 @@
 	"仓库简介": "仓库简介",
 	"请输入仓库简介": "请输入仓库简介",
 	"仓库门头": "仓库门头",
-	"禁运物品":"禁运物品"
+	"禁运物品":"禁运物品",
+	"商品列表": "商品列表",
+	"件数": "件数",
+	"申请取消": "申请取消",
+	"核销码": "核销码",
+	"取消申请中": "取消申请中",
+	"付款": "付款",
+	"确认收货": "确认收货",
+	"核销二维码": "核销二维码",
+	"请选择支付方式": "请选择支付方式",
+	"共num件":"共{num}件",
+	"商品金额":"商品金额",
+	"优惠券抵扣":"优惠券抵扣",
+	"配送费用":"配送费用",
+	"后台改价":"后台改价",
+	"实付金额":"实付金额",
+	"订单详情":"订单详情",
+	"物流信息":"物流信息",
+	"物流公司":"物流公司",
+	"物流单号":"物流单号",
+	"申请售后":"申请售后",
+	"已申请售后":"已申请售后",
+	"买家留言":"买家留言",
+	"去付款":"去付款",
+	"商品详情":"商品详情",
+	"拼团": "拼团",
+	"我的拼团": "我的拼团",
+	"暂无拼团订单，去添加一个吧": "暂无拼团订单，去添加一个吧",
+	"推荐": "推荐",
+	"拼团人数": "拼团人数",
+	"人团": "人团",
+	"还差": "还差",
+	"拼成": "拼成",
+	"暂时没有更多数据了哦": "暂时没有更多数据了哦~",
+	"热门国家":"热门国家",
+	"搜索拼团名称":"搜索拼团名称",
+	"最新":"最新",
+	"拼团详情": "拼团详情",
+	"快递方式": "快递方式",
+	"起送重量": "起送重量",
+	"拼团进度": "拼团进度",
+	"成员信息": "成员信息",
+	"快递信息": "快递信息",
+	"接受": "接受",
+	"拼团规则": "拼团规则",
+	"预报拼团包裹": "预报拼团包裹",
+	"现有订单参与拼团": "现有订单参与拼团",
+	"集运单号":"集运单号",
+	"开团人数": "开团人数",
+	"选择线路": "选择线路",
+	"特殊": "特殊：",
+	"个工作日": "个工作日",
+	"计算运费":"计算运费",
+	"选中优惠券":"选中优惠券",
+	"待付金额":"待付金额"
 }
