--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -846,5 +846,13 @@
     "选择发货地区":"选择发货地区",
     "发货地区":"发货地区",
     "累计优惠":"累计优惠",
-    "续期":"续期"
+    "续期":"续期",
+    "同意":"同意",
+    "已打包":"已打包",
+    "再考虑一下":"再考虑一下",
+    "积分兑换":"积分兑换",
+    "积分规则":"积分规则",
+    "会员权益":"会员权益",
+    "兑换须知":"兑换须知",
+    "领取后有效天数num天":"领取后有效天数{num}天"
 }
