增加弹窗功能

--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -854,5 +854,6 @@
     "积分规则":"积分规则",
     "会员权益":"会员权益",
     "兑换须知":"兑换须知",
-    "领取后有效天数num天":"领取后有效天数{num}天"
+    "领取后有效天数num天":"领取后有效天数{num}天",
+    "自提点地址":"自提点地址"
 }
