增加重量实拍图

--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -855,5 +855,6 @@
     "会员权益":"会员权益",
     "兑换须知":"兑换须知",
     "领取后有效天数num天":"领取后有效天数{num}天",
-    "自提点地址":"自提点地址"
+    "自提点地址":"自提点地址",
+    "重量/体积重实拍图":"重量/体积重实拍图"
 }
