--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -856,5 +856,10 @@
     "兑换须知":"兑换须知",
     "领取后有效天数num天":"领取后有效天数{num}天",
     "自提点地址":"自提点地址",
-    "重量/体积重实拍图":"重量/体积重实拍图"
+    "重量/体积重实拍图":"重量/体积重实拍图",
+    "通过":"通过",
+    "拒绝":"拒绝",
+    "地区":"地区",
+    "请输入地区":"请输入地区",
+    "选择自提点":"选择自提点"
 }
