--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -862,5 +862,9 @@
     "地区":"地区",
     "请输入地区":"请输入地区",
     "选择自提点":"选择自提点",
-    "登录成功":"登录成功"
+    "登录成功":"登录成功",
+    "专属客服":"专属客服",
+    "开通会员":"开通会员",
+    "请先勾选隐私协议":"请先勾选隐私协议",
+    "绑定微信成功,请重新登录,后续可以直接使用微信授权登录":"绑定微信成功,请重新登录,后续可以直接使用微信授权登录"
 }
