--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -335,7 +335,7 @@
 	"保存手机号": "保存手机号",
 	"请切换唛头":"请切换唛头",
 	"切换唛头":"切换唛头",
-	"请输入你的用户编号或者旧版本的编号，不填则自动生成":"请输入你的用户编号或者旧版本的编号,不填则自动生成",
+	"请输入你的用户编号或者旧版本的编号,不填则自动生成":"请输入你的用户编号或者旧版本的编号,不填则自动生成",
 	"请输入用户编号提示":"请输入你的用户编号或者旧版本的编号,不填则自动生成",
 	"请输入用户编号":"请输入用户编号",
 	"选择收货地区":"选择收货地区",
