完善增值服务板块

--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -484,7 +484,7 @@
 	"编辑包裹": "编辑包裹",
 	"请输入物品信息，格式参考例如: 衬衣*2，裤子*2，鞋子*1":"请输入物品信息，格式参考例如: 衬衣*2，裤子*2，鞋子*1",
 	"以下预估运费仅供参考，最终运费以合箱后的价格为准！": "以下预估运费仅供参考，最终运费以合箱后的价格为准！",
-	"预估运费": "预估运费：",
+	"预估运费": "预估运费",
 	"未查询到路线": "未查询到路线",
 	"仓库列表": "仓库列表",
 	"暂无数据": "暂无数据",
