--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -868,5 +868,6 @@
     "开通会员":"开通会员",
     "请先勾选隐私协议":"请先勾选隐私协议",
     "绑定微信成功,请重新登录,后续可以直接使用微信授权登录":"绑定微信成功,请重新登录,后续可以直接使用微信授权登录",
-    "去使用":"去使用"
+    "去使用":"去使用",
+    "编辑订单":"编辑订单"
 }
