--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -869,5 +869,8 @@
     "请先勾选隐私协议":"请先勾选隐私协议",
     "绑定微信成功,请重新登录,后续可以直接使用微信授权登录":"绑定微信成功,请重新登录,后续可以直接使用微信授权登录",
     "去使用":"去使用",
-    "编辑订单":"编辑订单"
+    "编辑订单":"编辑订单",
+    "总货品价值":"总货品价值",
+    "请输入总价值":"请输入总价值",
+    "总货品价值必填":"总货品价值必填"
 }
