--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -872,5 +872,7 @@
     "编辑订单":"编辑订单",
     "总货品价值":"总货品价值",
     "请输入总价值":"请输入总价值",
-    "总货品价值必填":"总货品价值必填"
+    "总货品价值必填":"总货品价值必填",
+    "客服中心":"客服中心",
+    "点击咨询":"点击咨询"
 }
