增加样式二

--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -874,5 +874,36 @@
     "总货品价值必填":"总货品价值必填",
     "客服中心":"客服中心",
     "点击咨询":"点击咨询",
-    "不限":"不限"
+    "不限":"不限",
+    "修改密码":"修改密码",
+    "原始密码":"原始密码",
+    "请输入原始密码":"请输入原始密码",
+    "新密码":"新密码",
+    "确认密码":"确认密码",
+    "请再次输入新密码":"请再次输入新密码",
+    "请先阅读隐私协议":"请先阅读隐私协议",
+    "请先录入微信号":"请先录入微信号",
+    "请先录入生日":"请先录入生日",
+    "请先录入邮箱":"请先录入邮箱",
+    "请先录入手机号":"请先录入手机号",
+    "新密码长度至少6位":"新密码长度至少6位",
+    "两次输入的新密码不一致":"两次输入的新密码不一致",
+    "请确认新密码":"请确认新密码",
+    "新密码不能与原始密码相同":"新密码不能与原始密码相同",
+    "修改中":"修改中...",
+    "密码修改成功":"密码修改成功",
+    "密码修改失败":"密码修改失败",
+    "网络错误，请重试":"网络错误，请重试",
+    "复制地址去购物":"复制地址去购物", 
+    "快递预报":"快递预报",
+    "单个/多个预报":"单个/多个预报",
+    "待入库":"待入库",
+    "等待送达仓库":"等待送达仓库",
+    "仓库已收到快递":"仓库已收到快递",
+    "包裹等待发出":"包裹等待发出",
+    "已下单":"已下单",
+    "已发出订单":"已发出订单",
+    "邮寄大件":"邮寄大件",
+    "采购商城":"采购商城",
+    "分销中心":"分销中心"
 }
