--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -906,5 +906,9 @@
     "邮寄大件":"邮寄大件",
     "采购商城":"采购商城",
     "分销中心":"分销中心",
-    "暂无自提点地址":"暂无自提点地址"
+    "暂无自提点地址":"暂无自提点地址",
+    "绑定快递号":"绑定快递号",
+    "暂无包裹数据":"暂无包裹数据",
+    "快递发出后，可以批量添加快递单号，一行一个单号：例如：SF12345678,136889585562":"快递发出后，可以批量添加快递单号，一行一个单号：\n例如：\nSF12345678\n136889585562",
+    "批量预报温馨提示内容":"批量预报温馨提示内容"
 }
