大更多語言版本

--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -910,5 +910,13 @@
     "绑定快递号":"绑定快递号",
     "暂无包裹数据":"暂无包裹数据",
     "快递发出后，可以批量添加快递单号，一行一个单号：例如：SF12345678,136889585562":"快递发出后，可以批量添加快递单号，一行一个单号：\n例如：\nSF12345678\n136889585562",
-    "批量预报温馨提示内容":"批量预报温馨提示内容"
+    "批量预报温馨提示内容":"批量预报温馨提示内容",
+    "首页":"首页",
+    "我的":"我的",
+    "商城":"商城",
+    "轨迹查询":"轨迹查询",
+    "提前预报包裹":"提前预报包裹",
+    "查询包裹状态":"查询包裹状态",
+    "找最佳路线":"找最佳路线",
+    "提交打包申请":"提交打包申请"
 }
