--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -823,7 +823,7 @@
 	"您的订单待发货":"您的订单待发货",
 	"分拣员正在飞速拣货中":"分拣员正在飞速拣货中",
 	"您的包裹已打包":"您的包裹已打包",
-	"您的包裹已发货":"您的包裹已发货",
+	"您的订单已发货":"您的订单已发货",
 	"订单已到货":"订单已到货",
 	"您的订单已完成":"您的订单已完成",
 	"包裹为问题件，请等待处理":"包裹为问题件，请等待处理",
@@ -918,5 +918,8 @@
     "提前预报包裹":"提前预报包裹",
     "查询包裹状态":"查询包裹状态",
     "找最佳路线":"找最佳路线",
-    "提交打包申请":"提交打包申请"
+    "提交打包申请":"提交打包申请",
+    "现金支付":"现金支付",
+    "未支付":"未支付",
+    "体积重":"体积重"
 }
