--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -921,5 +921,7 @@
     "提交打包申请":"提交打包申请",
     "现金支付":"现金支付",
     "未支付":"未支付",
-    "体积重":"体积重"
+    "体积重":"体积重",
+    "自提点":"自提点",
+    "您须到该自提点取货":"您须到该自提点取货"
 }
