仓库功能更新

--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -923,5 +923,6 @@
     "未支付":"未支付",
     "体积重":"体积重",
     "自提点":"自提点",
-    "您须到该自提点取货":"您须到该自提点取货"
+    "您须到该自提点取货":"您须到该自提点取货",
+    "VIP专享":"VIP专享"
 }
