--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -924,5 +924,6 @@
     "体积重":"体积重",
     "自提点":"自提点",
     "您须到该自提点取货":"您须到该自提点取货",
-    "VIP专享":"VIP专享"
+    "VIP专享":"VIP专享",
+    "提现申请成功":"提现申请成功"
 }
