--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -925,5 +925,7 @@
     "自提点":"自提点",
     "您须到该自提点取货":"您须到该自提点取货",
     "VIP专享":"VIP专享",
-    "提现申请成功":"提现申请成功"
+    "提现申请成功":"提现申请成功",
+    "复制淘口令":"复制淘口令",
+    "淘口令":"淘口令"
 }
