--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -927,5 +927,11 @@
     "VIP专享":"VIP专享",
     "提现申请成功":"提现申请成功",
     "复制淘口令":"复制淘口令",
-    "淘口令":"淘口令"
+    "淘口令":"淘口令",
+    "加入包裹":"加入包裹",
+    "加入订单":"加入订单",
+    "退出拼团":"退出拼团",
+    "加入拼团":"加入拼团",
+    "拼团群二维码":"拼团群二维码",
+    "点击上传拼团群二维码":"点击上传拼团群二维码"
 }
