--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -521,7 +521,7 @@
     "您没有登录，将无法使用部分功能":"您没有登录，将无法使用部分功能",
     "注册":"注册",
     "请输入邮箱":"请输入邮箱",
-    "请输入邮箱验证码":"请输入确认密码",
+    "请输入邮箱验证码":"请输入邮箱验证码",
     "请输入确认密码":"请输入确认密码", 
     "已有账号,立即登录":"已有账号,立即登录",
     "两次密码不一致":"两次密码不一致",
