--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -933,5 +933,6 @@
     "退出拼团":"退出拼团",
     "加入拼团":"加入拼团",
     "拼团群二维码":"拼团群二维码",
-    "点击上传拼团群二维码":"点击上传拼团群二维码"
+    "点击上传拼团群二维码":"点击上传拼团群二维码",
+    "目标重量":"目标重量"
 }
