--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -934,5 +934,8 @@
     "加入拼团":"加入拼团",
     "拼团群二维码":"拼团群二维码",
     "点击上传拼团群二维码":"点击上传拼团群二维码",
-    "目标重量":"目标重量"
+    "目标重量":"目标重量",
+    "提交凭证":"提交凭证",
+    "确认是否提交支付凭证":"确认是否提交支付凭证",
+    "请上传支付凭证":"请上传支付凭证"
 }
