增加订单通知

--- a/web/lang/10001/new_zhHans.json
+++ b/web/lang/10001/new_zhHans.json
@@ -937,5 +937,6 @@
     "目标重量":"目标重量",
     "提交凭证":"提交凭证",
     "确认是否提交支付凭证":"确认是否提交支付凭证",
-    "请上传支付凭证":"请上传支付凭证"
+    "请上传支付凭证":"请上传支付凭证",
+    "拍照上传(单击图片可删除)":"拍照上传(单击图片可删除)"
 }
